# panels

./: .gitignore  Cargo.toml  LICENSE  README.md  gocomics-browser.mjs  package-lock.json  package.json
.github/workflows/: ci.yml  tests.yml
data/: comics.json  dilbert_cache.json  tags.json
src/: cache.rs  config.rs  data.rs  error.rs  http_client.rs  lib.rs  main.rs  models.rs
src/routes/: comics.rs  meta.rs  mod.rs  proxy.rs  recommendations.rs  strips.rs
src/sources/: mod.rs
src/sources/arcamax/: mod.rs
src/sources/calvincdn/: mod.rs
src/sources/comicsrss/: mod.rs
src/sources/dilbert/: mod.rs
src/sources/gocomics/: browser.rs  bunny.rs  mod.rs  scraper.rs
src/sources/jikos/: mod.rs
src/sources/peanuts/: mod.rs
src/sources/phd/: mod.rs
src/sources/xkcd/: mod.rs
tests/: proxy_cache_headers.rs
web/: app.js  index.html  style.css
