[package]
name = "panels"
version = "0.1.0"
edition = "2024"
default-run = "panels"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
scraper = "0.22"
chrono = { version = "0.4", features = ["serde"] }
moka = { version = "0.12", features = ["future"] }
thiserror = "2"
anyhow = "1"
rand = "0.8"
regex = "1"
async-trait = "0.1"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tower = "0.5"
